make some fixes